# HRA_project

./: .gitignore  HRA_Dashboard_Insights.docx  HRA_Dashboard_Insights_Cards.docx  Makefile  README.md  analysis_plan.md  data_exploration.md  knowledge.md  plan.md  prd_engineering_lead.md  prd_product_manager.md  preprocess.py  presentation_notes.md  pyproject.toml  q1_event_frequency.py  q2_ui_elements.py  q3_rui_opacity.py  q4_eui_spatial_search.py  q5_cde_workflow.py  visualization_plan.md
app/: dashboard.py
config/: humanatlas.yml
data/processed/: hra_full_traffic.parquet
deliverables/: README.md
deliverables/presentation/: hra_dashboard_client_presentation.md  hra_dashboard_client_presentation.pptx
deliverables/report/: hra_analysis_recommendations_report.md
docs/: architecture.md  dashboard-layout.md  data-model.md  replication-guide.md
docs/setup/: github-publish.md
scripts/: build_duckdb.py  generate_presentation.py
src/humanatlas_dashboard/: __init__.py  charts.py  config.py  data_access.py  duckdb_builder.py  sections.py
src/humanatlas_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
